--- a/src/main/resources/static/css/result.css
+++ b/src/main/resources/static/css/result.css
@@ -4,6 +4,8 @@ html, body, content{
 
 .content{
     width: 95%;
+    position: relative;
+    top: 60px;
     max-width: 1200px;
     min-height: 300px;
     margin: 0 auto;
@@ -16,9 +18,17 @@ html, body, content{
     float: left;
     margin: 10px;
     width: 250px;
-    border: solid 1px #b7b5b2;
-    border-radius: 5px;
-    box-shadow: 0px 0px 1px 1px rgba(100, 104, 107, 0.28);
+    /*border: solid 1px #b7b5b2;*/
+    border-top: 8px solid #343537;
+    /*box-shadow: 0px 0px 1px 1px rgba(100, 104, 107, 0.28);*/
+    box-shadow: 0.5px 2px 4px 0 #bdbdbd;
+    padding: 20px;
+    transform: translate3d(0, 0, 0);
+    transition: .5s;
+}
+.abj-card:hover{
+    transform: translate3d(0, -8px, 0);
+    transition: .5s;
 }
 
 .abj-thumbnail{
@@ -31,11 +41,12 @@ html, body, content{
 }
 .abj-description{
     width: 100%;
-    height: 40%;
+    height: 30%;
     padding: 10px;
 }
 
 .abj-handle-bar{
+    border-top: 1px solid #e6e6e6;
     height: 10%;
 }
 .abj-handle-bar a{
@@ -43,9 +54,32 @@ html, body, content{
     width: 50%;
     height: 100%;
     float: left;
+    color: rgba(15, 37, 64, 1);
+    transition: .2s;
     text-align: center;
     line-height: 37px;
+
 }
+.abj-handle-bar a:hover{
+    text-decoration: none;
+    color: #FBBC05;
+}
+.abj-handle-bar a::before, a::after{
+    content: '';
+    transform: translateX(0px);
+    position: absolute;
+}
+.abj-handle-bar a:hover::before{
+    content: '[';
+    transform: translateX(-12px);
+    transition: transform .2s;
+}
+.abj-handle-bar a:hover::after{
+    content: ']';
+    transform: translateX(10px);
+    transition: transform .2s;
+}
+
 #not-found-div{
     width: 120px;
     margin: 0 auto;
@@ -55,4 +89,24 @@ html, body, content{
     font-size: 20px;
     color: #888;
 
+}
+
+#search_input{
+    height: 30px;
+    width: 300px;
+    position: relative;
+    outline: none;
+    left: 50px;
+    border: solid 1px rgba(183, 183, 183, 0.54);
+    top: 8px;
+    padding: 10px;
+}
+
+.navigator{
+    height: 50px;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    background-color: #FAFAFA;
+    border-bottom: solid 1px rgba(226,229,231,0.69);
 }
