1. 改一发前端 2. CommentController 没有提供路由映射，顺便加了一下 3. CommentController 由于判断是否为空的结果是不为空，所以执行不到czq写的mock数据，暂时改为了无论如何都返回mock数据 以上，对这个类有改动的同志注意处理冲突

--- a/src/main/resources/static/css/result.css
+++ b/src/main/resources/static/css/result.css
@@ -36,8 +36,8 @@ html, body, content{
     height: 50%;
     width: 100%;
     background-size: 100% 100%;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    /*border-top-left-radius: 5px;*/
+    /*border-top-right-radius: 5px;*/
 }
 .abj-description{
     width: 100%;
